[tool.poetry]
name = "python-local-development"
version = "0.1.0"
description = ""
authors = ["Pedro Calleja <pecalleja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
